[gd_scene load_steps=6 format=4 uid="uid://8dybkdjjka6l"]

[ext_resource type="Script" path="res://scripts/boss_room.gd" id="1_ib2ew"]
[ext_resource type="Texture2D" uid="uid://d1h7v314potx5" path="res://assets/Dungeon/Hana Caraka Mining - Free/tileset.png" id="1_owa0u"]
[ext_resource type="PackedScene" uid="uid://bd8ht4flvnghq" path="res://scenes/boss_heart.tscn" id="4_gwscl"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_6muku"]
texture = ExtResource("1_owa0u")
0:0/0 = 0
0:0/0/terrain_set = 0
0:0/0/terrain = 0
0:0/0/terrains_peering_bit/right_side = 0
0:0/0/terrains_peering_bit/bottom_right_corner = 0
0:0/0/terrains_peering_bit/bottom_side = 0
1:0/0 = 0
1:0/0/terrain_set = 0
1:0/0/terrain = 0
1:0/0/terrains_peering_bit/right_side = 0
1:0/0/terrains_peering_bit/bottom_right_corner = 0
1:0/0/terrains_peering_bit/bottom_side = 0
1:0/0/terrains_peering_bit/bottom_left_corner = 0
1:0/0/terrains_peering_bit/left_side = 0
2:0/0 = 0
2:0/0/terrain_set = 0
2:0/0/terrain = 0
2:0/0/terrains_peering_bit/bottom_side = 0
2:0/0/terrains_peering_bit/bottom_left_corner = 0
2:0/0/terrains_peering_bit/left_side = 0
3:0/0 = 0
3:0/0/terrain_set = 0
3:0/0/terrain = 0
3:0/0/terrains_peering_bit/right_side = 0
3:0/0/terrains_peering_bit/bottom_side = 0
3:0/0/terrains_peering_bit/bottom_left_corner = 0
3:0/0/terrains_peering_bit/left_side = 0
3:0/0/terrains_peering_bit/top_left_corner = 0
3:0/0/terrains_peering_bit/top_side = 0
3:0/0/terrains_peering_bit/top_right_corner = 0
4:0/0 = 0
4:0/0/terrain_set = 0
4:0/0/terrain = 0
4:0/0/terrains_peering_bit/right_side = 0
4:0/0/terrains_peering_bit/bottom_right_corner = 0
4:0/0/terrains_peering_bit/bottom_side = 0
4:0/0/terrains_peering_bit/left_side = 0
4:0/0/terrains_peering_bit/top_left_corner = 0
4:0/0/terrains_peering_bit/top_side = 0
4:0/0/terrains_peering_bit/top_right_corner = 0
5:0/0 = 0
5:0/0/terrain_set = 1
5:0/0/terrain = 0
5:0/0/terrains_peering_bit/right_side = 0
5:0/0/terrains_peering_bit/bottom_right_corner = 0
5:0/0/terrains_peering_bit/bottom_side = 0
6:0/0 = 0
6:0/0/terrain_set = 1
6:0/0/terrain = 0
6:0/0/terrains_peering_bit/right_side = 0
6:0/0/terrains_peering_bit/bottom_right_corner = 0
6:0/0/terrains_peering_bit/bottom_side = 0
6:0/0/terrains_peering_bit/bottom_left_corner = 0
6:0/0/terrains_peering_bit/left_side = 0
7:0/0 = 0
7:0/0/terrain_set = 1
7:0/0/terrain = 0
7:0/0/terrains_peering_bit/bottom_side = 0
7:0/0/terrains_peering_bit/bottom_left_corner = 0
7:0/0/terrains_peering_bit/left_side = 0
8:0/0 = 0
8:0/0/terrain_set = 1
8:0/0/terrain = 0
8:0/0/terrains_peering_bit/right_side = 0
8:0/0/terrains_peering_bit/bottom_side = 0
8:0/0/terrains_peering_bit/bottom_left_corner = 0
8:0/0/terrains_peering_bit/left_side = 0
8:0/0/terrains_peering_bit/top_left_corner = 0
8:0/0/terrains_peering_bit/top_side = 0
8:0/0/terrains_peering_bit/top_right_corner = 0
9:0/0 = 0
9:0/0/terrain_set = 1
9:0/0/terrain = 0
9:0/0/terrains_peering_bit/right_side = 0
9:0/0/terrains_peering_bit/bottom_right_corner = 0
9:0/0/terrains_peering_bit/bottom_side = 0
9:0/0/terrains_peering_bit/left_side = 0
9:0/0/terrains_peering_bit/top_left_corner = 0
9:0/0/terrains_peering_bit/top_side = 0
9:0/0/terrains_peering_bit/top_right_corner = 0
10:0/0 = 0
0:1/0 = 0
0:1/0/terrain_set = 0
0:1/0/terrain = 0
0:1/0/terrains_peering_bit/right_side = 0
0:1/0/terrains_peering_bit/bottom_right_corner = 0
0:1/0/terrains_peering_bit/bottom_side = 0
0:1/0/terrains_peering_bit/top_side = 0
0:1/0/terrains_peering_bit/top_right_corner = 0
1:1/0 = 0
1:1/0/terrain_set = 0
1:1/0/terrain = 0
1:1/0/terrains_peering_bit/right_side = 0
1:1/0/terrains_peering_bit/bottom_right_corner = 0
1:1/0/terrains_peering_bit/bottom_side = 0
1:1/0/terrains_peering_bit/bottom_left_corner = 0
1:1/0/terrains_peering_bit/left_side = 0
1:1/0/terrains_peering_bit/top_left_corner = 0
1:1/0/terrains_peering_bit/top_side = 0
1:1/0/terrains_peering_bit/top_right_corner = 0
2:1/0 = 0
2:1/0/terrain_set = 0
2:1/0/terrain = 0
2:1/0/terrains_peering_bit/bottom_side = 0
2:1/0/terrains_peering_bit/bottom_left_corner = 0
2:1/0/terrains_peering_bit/left_side = 0
2:1/0/terrains_peering_bit/top_left_corner = 0
2:1/0/terrains_peering_bit/top_side = 0
3:1/0 = 0
3:1/0/terrain_set = 0
3:1/0/terrain = 0
3:1/0/terrains_peering_bit/right_side = 0
3:1/0/terrains_peering_bit/bottom_right_corner = 0
3:1/0/terrains_peering_bit/bottom_side = 0
3:1/0/terrains_peering_bit/bottom_left_corner = 0
3:1/0/terrains_peering_bit/left_side = 0
3:1/0/terrains_peering_bit/top_left_corner = 0
3:1/0/terrains_peering_bit/top_side = 0
4:1/0 = 0
4:1/0/terrain_set = 0
4:1/0/terrain = 0
4:1/0/terrains_peering_bit/right_side = 0
4:1/0/terrains_peering_bit/bottom_right_corner = 0
4:1/0/terrains_peering_bit/bottom_side = 0
4:1/0/terrains_peering_bit/bottom_left_corner = 0
4:1/0/terrains_peering_bit/left_side = 0
4:1/0/terrains_peering_bit/top_side = 0
4:1/0/terrains_peering_bit/top_right_corner = 0
5:1/0 = 0
5:1/0/terrain_set = 1
5:1/0/terrain = 0
5:1/0/terrains_peering_bit/right_side = 0
5:1/0/terrains_peering_bit/bottom_right_corner = 0
5:1/0/terrains_peering_bit/bottom_side = 0
5:1/0/terrains_peering_bit/top_side = 0
5:1/0/terrains_peering_bit/top_right_corner = 0
6:1/0 = 0
6:1/0/terrain_set = 1
6:1/0/terrain = 0
6:1/0/terrains_peering_bit/right_side = 0
6:1/0/terrains_peering_bit/bottom_right_corner = 0
6:1/0/terrains_peering_bit/bottom_side = 0
6:1/0/terrains_peering_bit/bottom_left_corner = 0
6:1/0/terrains_peering_bit/left_side = 0
6:1/0/terrains_peering_bit/top_left_corner = 0
6:1/0/terrains_peering_bit/top_side = 0
6:1/0/terrains_peering_bit/top_right_corner = 0
7:1/0 = 0
7:1/0/terrain_set = 1
7:1/0/terrain = 0
7:1/0/terrains_peering_bit/bottom_side = 0
7:1/0/terrains_peering_bit/bottom_left_corner = 0
7:1/0/terrains_peering_bit/left_side = 0
7:1/0/terrains_peering_bit/top_left_corner = 0
7:1/0/terrains_peering_bit/top_side = 0
8:1/0 = 0
8:1/0/terrain_set = 1
8:1/0/terrain = 0
8:1/0/terrains_peering_bit/right_side = 0
8:1/0/terrains_peering_bit/bottom_right_corner = 0
8:1/0/terrains_peering_bit/bottom_side = 0
8:1/0/terrains_peering_bit/bottom_left_corner = 0
8:1/0/terrains_peering_bit/left_side = 0
8:1/0/terrains_peering_bit/top_left_corner = 0
8:1/0/terrains_peering_bit/top_side = 0
9:1/0 = 0
9:1/0/terrain_set = 1
9:1/0/terrain = 0
9:1/0/terrains_peering_bit/right_side = 0
9:1/0/terrains_peering_bit/bottom_right_corner = 0
9:1/0/terrains_peering_bit/bottom_side = 0
9:1/0/terrains_peering_bit/bottom_left_corner = 0
9:1/0/terrains_peering_bit/left_side = 0
9:1/0/terrains_peering_bit/top_side = 0
9:1/0/terrains_peering_bit/top_right_corner = 0
0:2/0 = 0
0:2/0/terrain_set = 0
0:2/0/terrain = 0
0:2/0/terrains_peering_bit/right_side = 0
0:2/0/terrains_peering_bit/top_side = 0
0:2/0/terrains_peering_bit/top_right_corner = 0
1:2/0 = 0
1:2/0/terrain_set = 0
1:2/0/terrain = 0
1:2/0/terrains_peering_bit/right_side = 0
1:2/0/terrains_peering_bit/left_side = 0
1:2/0/terrains_peering_bit/top_left_corner = 0
1:2/0/terrains_peering_bit/top_side = 0
1:2/0/terrains_peering_bit/top_right_corner = 0
2:2/0 = 0
2:2/0/terrain_set = 0
2:2/0/terrain = 0
2:2/0/terrains_peering_bit/left_side = 0
2:2/0/terrains_peering_bit/top_left_corner = 0
2:2/0/terrains_peering_bit/top_side = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
5:2/0/terrain_set = 1
5:2/0/terrain = 0
5:2/0/terrains_peering_bit/right_side = 0
5:2/0/terrains_peering_bit/top_side = 0
5:2/0/terrains_peering_bit/top_right_corner = 0
6:2/0 = 0
6:2/0/terrain_set = 1
6:2/0/terrain = 0
6:2/0/terrains_peering_bit/right_side = 0
6:2/0/terrains_peering_bit/left_side = 0
6:2/0/terrains_peering_bit/top_left_corner = 0
6:2/0/terrains_peering_bit/top_side = 0
6:2/0/terrains_peering_bit/top_right_corner = 0
7:2/0 = 0
7:2/0/terrain_set = 1
7:2/0/terrain = 0
7:2/0/terrains_peering_bit/left_side = 0
7:2/0/terrains_peering_bit/top_left_corner = 0
7:2/0/terrains_peering_bit/top_side = 0
8:2/0 = 0
9:2/0 = 0
3:3/0 = 0
4:3/0 = 0
8:3/0 = 0
9:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0

[sub_resource type="TileSet" id="TileSet_8nje2"]
terrain_set_0/mode = 0
terrain_set_0/terrain_0/name = "Floor1"
terrain_set_0/terrain_0/color = Color(0, 0.717241, 0.775754, 1)
terrain_set_1/mode = 0
terrain_set_1/terrain_0/name = "Floor2"
terrain_set_1/terrain_0/color = Color(0.249, 0.766229, 7.70092e-07, 1)
sources/0 = SubResource("TileSetAtlasSource_6muku")

[node name="Boss_Room" type="Node2D"]
script = ExtResource("1_ib2ew")
time_before_roots = 5.0
time_between_roots = 5.0

[node name="ColorRect" type="ColorRect" parent="."]
z_index = -2
offset_left = -667.0
offset_top = -471.0
offset_right = 715.0
offset_bottom = 486.0
color = Color(0, 0, 0, 1)

[node name="TileMapLayer" type="TileMapLayer" parent="."]
z_index = -1
tile_map_data = PackedByteArray("AAAEAAQAAAAGAAEAAAAEAAMAAAAGAAEAAAAEAAIAAAAGAAEAAAAEAAEAAAAGAAEAAAAEAAAAAAAGAAEAAAAEAP//AAAGAAEAAAAEAP7/AAAGAAEAAAAEAP3/AAAGAAEAAAAEAPz/AAAGAAEAAAAEAPv/AAAGAAEAAAADAAQAAAAGAAEAAAADAAMAAAAGAAEAAAADAAIAAAAGAAEAAAADAAEAAAAGAAEAAAADAAAAAAAGAAEAAAADAP//AAAGAAEAAAADAP7/AAAGAAEAAAADAP3/AAAGAAEAAAADAPz/AAAGAAEAAAADAPv/AAAGAAEAAAACAAQAAAAGAAEAAAACAAMAAAAGAAEAAAACAAIAAAAGAAEAAAACAAEAAAAGAAEAAAACAAAAAAAGAAEAAAACAP//AAAGAAEAAAACAP7/AAAGAAEAAAACAP3/AAAGAAEAAAACAPz/AAAGAAEAAAACAPv/AAAGAAEAAAABAAQAAAAGAAEAAAABAAMAAAAGAAEAAAABAAIAAAAGAAEAAAABAAEAAAAGAAEAAAABAAAAAAAGAAEAAAABAP//AAAGAAEAAAABAP7/AAAGAAEAAAABAP3/AAAGAAEAAAABAPz/AAAGAAEAAAABAPv/AAAGAAEAAAAAAAQAAAAGAAEAAAAAAAMAAAAGAAEAAAAAAAEAAAAGAAEAAAAAAAAAAAAGAAEAAAAAAP//AAAGAAEAAAAAAP7/AAAGAAEAAAAAAP3/AAAGAAEAAAAAAPz/AAAGAAEAAAAAAPv/AAAGAAEAAAD//wQAAAAGAAEAAAD//wMAAAAGAAEAAAD//wIAAAAGAAEAAAD//wEAAAAGAAEAAAD//wAAAAAGAAEAAAD/////AAAGAAEAAAD///7/AAAGAAEAAAD///3/AAAGAAEAAAD///z/AAAGAAEAAAD///v/AAAGAAEAAAD+/wQAAAAGAAEAAAD+/wMAAAAGAAEAAAD+/wIAAAAGAAEAAAD+/wEAAAAGAAEAAAD+/wAAAAAGAAEAAAD+////AAAGAAEAAAD+//7/AAAGAAEAAAD+//3/AAAGAAEAAAD+//z/AAAGAAEAAAD+//v/AAAGAAEAAAD9/wQAAAAGAAEAAAD9/wMAAAAGAAEAAAD9/wIAAAAGAAEAAAD9/wEAAAAGAAEAAAD9/wAAAAAGAAEAAAD9////AAAGAAEAAAD9//7/AAAGAAEAAAD9//3/AAAGAAEAAAD9//z/AAAGAAEAAAD9//v/AAAGAAEAAAD8/wQAAAAGAAEAAAD8/wMAAAAGAAEAAAD8/wIAAAAGAAEAAAD8/wEAAAAGAAEAAAD8/wAAAAAGAAEAAAD8////AAAGAAEAAAD8//7/AAAGAAEAAAD8//3/AAAGAAEAAAD8//z/AAAGAAEAAAD8//v/AAAGAAEAAAD7/wQAAAAGAAEAAAD7/wMAAAAGAAEAAAD7/wIAAAAGAAEAAAD7/wEAAAAGAAEAAAD7/wAAAAAGAAEAAAD7////AAAGAAEAAAD7//7/AAAGAAEAAAD7//3/AAAGAAEAAAD7//z/AAAGAAEAAAD7//v/AAAGAAEAAAAFAAUAAAAGAAEAAAAFAAQAAAAGAAEAAAAFAAMAAAAGAAEAAAAFAAIAAAAGAAEAAAAFAAEAAAAGAAEAAAAFAAAAAAAGAAEAAAAFAP//AAAGAAEAAAAFAP7/AAAGAAEAAAAFAP3/AAAGAAEAAAAFAPz/AAAGAAEAAAAFAPv/AAAGAAEAAAAFAPr/AAAGAAEAAAAEAAUAAAAGAAEAAAAEAPr/AAAGAAEAAAADAAUAAAAGAAEAAAADAPr/AAAGAAEAAAACAAUAAAAGAAEAAAACAPr/AAAGAAEAAAABAAUAAAAGAAEAAAABAPr/AAAGAAEAAAAAAAUAAAAGAAEAAAAAAPr/AAAGAAEAAAD//wUAAAAGAAEAAAD///r/AAAGAAEAAAD+/wUAAAAGAAEAAAD+//r/AAAGAAEAAAD9/wUAAAAGAAEAAAD9//r/AAAGAAEAAAD8/wUAAAAGAAEAAAD8//r/AAAGAAEAAAD7/wUAAAAGAAEAAAD7//r/AAAGAAEAAAD6/wUAAAAGAAEAAAD6/wQAAAAGAAEAAAD6/wMAAAAGAAEAAAD6/wIAAAAGAAEAAAD6/wEAAAAGAAEAAAD6/wAAAAAGAAEAAAD6////AAAGAAEAAAD6//7/AAAGAAEAAAD6//3/AAAGAAEAAAD6//z/AAAGAAEAAAD6//v/AAAGAAEAAAD6//r/AAAGAAEAAAAIAAUAAAAHAAIAAAAIAAQAAAAIAAAAAAAIAAMAAAAGAAEAAAAIAAIAAAAGAAEAAAAIAAEAAAAGAAEAAAAIAAAAAAAGAAEAAAAIAP//AAAGAAEAAAAIAP7/AAAGAAEAAAAIAP3/AAAGAAEAAAAIAPz/AAAGAAEAAAAIAPv/AAAIAAEAAAAIAPr/AAAHAAAAAAAHAAUAAAAIAAAAAAAHAAQAAAAGAAEAAAAHAAMAAAAGAAEAAAAHAAIAAAAGAAEAAAAHAAEAAAAGAAEAAAAHAAAAAAAGAAEAAAAHAP//AAAGAAEAAAAHAP7/AAAGAAEAAAAHAP3/AAAGAAEAAAAHAPz/AAAGAAEAAAAHAPv/AAAGAAEAAAAHAPr/AAAIAAEAAAAGAAUAAAAGAAEAAAAGAAQAAAAGAAEAAAAGAAMAAAAGAAEAAAAGAAIAAAAGAAEAAAAGAAEAAAAGAAEAAAAGAAAAAAAGAAEAAAAGAP//AAAGAAEAAAAGAP7/AAAGAAEAAAAGAP3/AAAGAAEAAAAGAPz/AAAGAAEAAAAGAPv/AAAGAAEAAAAGAPr/AAAGAAEAAAD5/wUAAAAGAAEAAAD5/wQAAAAGAAEAAAD5/wMAAAAGAAEAAAD5/wIAAAAGAAEAAAD5/wEAAAAGAAEAAAD5/wAAAAAGAAEAAAD5////AAAGAAEAAAD5//7/AAAGAAEAAAD5//3/AAAGAAEAAAD5//z/AAAGAAEAAAD5//v/AAAGAAEAAAD5//r/AAAGAAEAAAD4/wUAAAAJAAAAAAD4/wQAAAAGAAEAAAD4/wMAAAAGAAEAAAD4/wIAAAAGAAEAAAD4/wEAAAAGAAEAAAD4/wAAAAAGAAEAAAD4////AAAGAAEAAAD4//7/AAAGAAEAAAD4//3/AAAGAAEAAAD4//z/AAAGAAEAAAD4//v/AAAGAAEAAAD4//r/AAAJAAEAAAD3/wUAAAAFAAIAAAD3/wQAAAAJAAAAAAD3/wMAAAAGAAEAAAD3/wIAAAAGAAEAAAD3/wEAAAAGAAEAAAD3/wAAAAAGAAEAAAD3////AAAGAAEAAAD3//7/AAAGAAEAAAD3//3/AAAGAAEAAAD3//z/AAAGAAEAAAD3//v/AAAJAAEAAAD3//r/AAAFAAAAAAD2/wQAAAAFAAIAAAD2/wMAAAAFAAEAAAD2/wIAAAAFAAEAAAD2/wEAAAAFAAEAAAD2/wAAAAAFAAEAAAD2////AAAFAAEAAAD2//7/AAAFAAEAAAD2//3/AAAFAAEAAAD2//z/AAAFAAEAAAD2//v/AAAFAAAAAAAJAPv/AAAHAAAAAAAJAPz/AAAHAAEAAAAJAP3/AAAHAAEAAAAJAP7/AAAHAAEAAAAJAP//AAAHAAEAAAAJAAAAAAAHAAEAAAAJAAMAAAAHAAEAAAAJAAQAAAAHAAIAAAAJAAIAAAAHAAEAAAAJAAEAAAAHAAEAAAD4//n/AAAFAAAAAAD5//n/AAAGAAAAAAD6//n/AAAGAAAAAAD7//n/AAAGAAAAAAD8//n/AAAGAAAAAAD9//n/AAAGAAAAAAD+//n/AAAGAAAAAAD///n/AAAGAAAAAAAAAPn/AAAGAAAAAAABAPn/AAAGAAAAAAACAPn/AAAGAAAAAAADAPn/AAAGAAAAAAAEAPn/AAAGAAAAAAAFAPn/AAAGAAAAAAAGAPn/AAAGAAAAAAAHAPn/AAAHAAAAAAAHAAYAAAAHAAIAAAAGAAYAAAAGAAIAAAAFAAYAAAAGAAIAAAAEAAYAAAAGAAIAAAADAAYAAAAGAAIAAAACAAYAAAAGAAIAAAABAAYAAAAGAAIAAAAAAAYAAAAGAAIAAAD8/wYAAAAGAAIAAAD7/wYAAAAGAAIAAAD6/wYAAAAGAAIAAAD5/wYAAAAGAAIAAAD4/wYAAAAFAAIAAAD9/wYAAAAGAAIAAAD+/wYAAAAGAAIAAAD//wYAAAAGAAIAAAAAAAIAAAAGAAEAAAA=")
tile_set = SubResource("TileSet_8nje2")

[node name="Boss_Heart" parent="." instance=ExtResource("4_gwscl")]

[node name="Roots" type="Node2D" parent="."]
unique_name_in_owner = true

[node name="Timers" type="Node2D" parent="."]

[node name="Start_Timer" type="Timer" parent="Timers"]
unique_name_in_owner = true
one_shot = true

[node name="Root_Timer" type="Timer" parent="Timers"]
unique_name_in_owner = true

[node name="Player_Spawn" type="Node2D" parent="."]
position = Vector2(0, 80)

[connection signal="timeout" from="Timers/Start_Timer" to="." method="_on_start_timer_timeout"]
[connection signal="timeout" from="Timers/Root_Timer" to="." method="_on_root_timer_timeout"]
